--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@hookform/resolvers": "^5.0.1",
     "@supabase/supabase-js": "^2.39.7",
     "chart.js": "^4.4.9",
     "date-fns": "^4.1.0",
@@ -17,8 +18,13 @@
     "lucide-react": "^0.344.0",
     "react": "^18.3.1",
     "react-chartjs-2": "^5.3.0",
+    "react-datepicker": "^8.3.0",
     "react-dom": "^18.3.1",
-    "react-router-dom": "^6.22.3"
+    "react-hook-form": "^7.56.4",
+    "react-imask": "^7.6.1",
+    "react-router-dom": "^6.22.3",
+    "recharts": "^2.15.3",
+    "zod": "^3.25.20"
   },
   "devDependencies": {
     "@eslint/js": "^9.9.1",
