--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "react-imask": "^7.6.1",
     "react-router-dom": "^6.22.3",
     "recharts": "^2.15.3",
+    "supabase": "^2.26.9",
     "zod": "^3.25.20"
   },
   "devDependencies": {
