--- a/public/manifest.json
+++ b/public/manifest.json
@@ -8,17 +8,27 @@
     "theme_color": "#059669",
     "icons": [
         {
-            "src": "/wallet.svg",
+            "src": "wallet.svg",
             "sizes": "192x192",
             "type": "image/svg+xml",
-            "purpose": "any maskable"
+            "purpose": "any"
         },
         {
-            "src": "/wallet.svg",
+            "src": "wallet.svg",
             "sizes": "512x512",
             "type": "image/svg+xml",
-            "purpose": "any maskable"
+            "purpose": "maskable"
+        },
+        {
+            "src": "wallet.svg",
+            "sizes": "512x512",
+            "type": "image/svg+xml",
+            "purpose": "any"
         }
     ],
-    "orientation": "portrait"
+    "orientation": "portrait",
+    "categories": [
+        "finance"
+    ],
+    "lang": "pt-BR"
 }
